test/files/neg/t9041.check
t9041.scala:11: error: could not find implicit value for parameter cellSetter: CellSetter[scala.math.BigDecimal]
      def setCell(cell: Cell, data: math.BigDecimal) { cell.setCellValue(data) }
                                                                        ^
one error found
